tests/compile_fail/ctx_lt_pointer.cc
// SPDX-License-Identifier: MIT
#include <umitest/test.hh>

void test() {
    umi::test::Suite s("x");
    s.run("x", [](auto& ctx) { ctx.lt("a", "b"); });
}
